# my-pytorch-lightning

./: .gitignore  .pre-commit-config.yaml  README.md  cli.py  config.yaml  config1.yaml  environment.yaml  pyproject.toml  requirements.txt  setup.py
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
configs/: config.yaml  config1.yaml  configs.yaml  pictures.yaml  train.yaml  train_pictures.yaml  unet.yaml
configs/callbacks/: pictures.yaml  save_images.yaml
configs/data/: picture.yaml  pictures.yaml
configs/experiment/: example.yaml
configs/logger/: many_loggers.yaml  mlflow.yaml
configs/model/: pictures.yaml
configs/trainer/: default.yaml
notebooks/: test.py
scripts/: schedule.sh
src/: cli.py  cli_unet.py  eval.py  train.py  train_cli.py
src/callbacks/: save_figure.py  save_images.py
src/data/: mnist_datamodule.py  picture_datamodule.py  shard_datamodule.py
src/data/components/: picture_data.py
src/models/: mnist_module.py  picture_module.py  unet_model.py
src/models/components/: backbone.py  unet_parts.py
src/utils/: idea  rich_utils.py  utils.py
