[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "3.9.0"

# --------- pytorch --------- #
torch = {url = "https://download.pytorch.org/whl/cu116/torch-1.12.1%2Bcu116-cp39-cp39-linux_x86_64.whl"}
torchvision = "^0.13.0"
pytorch-lightning ="^1.9.1"
torchmetrics = "^0.11.0"

# --------- hydra --------- #
hydra-core = "^1.3.2"
hydra-colorlog ="^1.2.0"
hydra-optuna-sweeper = "^1.2.0"

# --------- loggers --------- #
# wandb
# neptune-client
mlflow = "^2.0" # requires numba
# comet-ml

# --------- others --------- #
pyrootutils = "^1.0.4"    # standardizing the project root setup
rich ="^13.0"   # beautiful text formatting in terminal
llvmlite = "0.31.0" # https://zenn.dev/iimuz/articles/ccdcf54829058cedf3d3 (for numba)
# webdataset     If you want to serialize data

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pre-commit = "^2.17.0"
ipykernel = "^6.21.0"
black = "21.12b0"        # code formatting
isort = "5.10.1"       # import sorting
flake8 = "4.0.1"       # code analysis
mypy = "^1.1.1"        # static type checking

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = [
  "--color=yes",
  "--durations=0",
  "--strict-markers",
  "--doctest-modules",
]
filterwarnings = [
  "ignore::DeprecationWarning",
  "ignore::UserWarning",
]
log_cli = "True"
markers = [
  "slow: slow tests",
]
minversion = "6.0"
testpaths = "tests/"

[tool.coverage.report]
exclude_lines = [
    "pragma: nocover",
    "raise NotImplementedError",
    "raise NotImplementedError()",
    "if __name__ == .__main__.:",
]
